--- a/static/html/dual-helios.html
+++ b/static/html/dual-helios.html
@@ -35,7 +35,7 @@
                                 <h3>Rda W/Dual Coil (helios)</h3>
                             </div>
                             <!-- <br><br> -->
-                            <video width="800px" height="600px" id="player1" controles="true" autoplay="false">
+                            <video width="800px" height="600px" id="player1" preload="none" controls>
                                 <source src="../media/rda-w-dual.mp4" type="video/mp4" title="mp4">
                             </video>
                         </div><!--end:col-->
